...
            // TODO: Change to dynamic
            await mutateAsync(1);
            refetch();
          }}
          className="hover:scale-110 ease-in transition-all"
        >
          <Typo.Large>Create post</Typo.Large>
        </Pressable>
        <Pressable
          className=" hover:scale-110  ease-in transition-all"
          onPress={toggleColorScheme}
        >
          {colorScheme === "light" ? (
...
